# vkUITest

./: .gitignore  AndroidManifest.xml  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  Makefile.android  README.md  config.ini  embedPipelineShaders.py  engine.c  glsl.targets  glsl.xml  my-release-key.keystore  perframe.c  perframe.h  vkEngine  vkEngine.sln  vkEngine.vcxproj  vkEngine.vcxproj.filters  vkUITest.apk.idsig
assets/: face.tga
audio/: audio.c  audio.h  dsp.c  dsp.h  hrir.c  music.c  music.h  qoa.c  qoa.h  sfx.c  sfx.h  sounds.h  wave.c
audio/backend/: android.c  pipewire.c  wasapi.c
camera/: camera.c  camera.h
cmake/: buildAndroid.cmake  buildLinux.cmake  buildShaders.cmake  buildWindows.cmake  fetchDeps.cmake
console/: console.c  console.h
font/: bezier_font.c  font.c  font.h
image/: image.c  image.h  qoi.c  tga.c
lights/: lights.c  lights.h
math/: math.c  math.h  matrix.c  quat.c  vec2.c  vec3.c  vec4.c
model/: bmodel.c  bmodel.h
network/: client_network.c  client_network.h  network.c  network.h
particle/: particle.c  particle.h
physics/: particle.c  particle.h  physics.c  physics.h  physicslist.c  physicslist.h
pipelines/: font.pipeline  particle.pipeline  ui_sdf.pipeline
shaders/: bezier.frag  bezier.geom  bezier.vert  font.frag  font.frag.spv  font.vert  font.vert.spv  particle.frag  particle.geom  particle.vert  ui_sdf.frag  ui_sdf.frag.spv  ui_sdf.vert  ui_sdf.vert.spv
system/: android_fopen.c  android_main.c  linux_x11.c  memzone.c  memzone.h  system.h  threads.c  threads.h  win32.c
system/android/: android_fopen.c  android_fopen.h  android_main.c
system/linux/: linux_wayland.c  linux_x11.c
system/win32/: win32.c
threads/: threads.c  threads.h
ui/: bargraph.c  button.c  checkbox.c  cursor.c  edittext.c  sprite.c  text.c  ui.c  ui.h  window.c
utils/: base64.c  base64.h  config.c  config.h  event.c  event.h  genid.c  genid.h  id.c  id.h  input.c  input.h  list.c  list.h  lz4.c  lz4.h  memzone.c  memzone.h  pipeline.c  pipeline.h  serial.h  spatialhash.c  spatialhash.h  spvparse.c  spvparse.h  tokenizer.c  tokenizer.h
vr/: vr.c  vr.h
vulkan/: vulkan.h  vulkan_buffer.c  vulkan_context.c  vulkan_descriptorset.c  vulkan_framebuffer.c  vulkan_heaps.c  vulkan_instance.c  vulkan_mem.c  vulkan_pipeline.c  vulkan_renderpass.c  vulkan_swapchain.c
